# University-Work-SEM-05

./: .gitignore  3OperatingSystems_Assignment.docx  Prachi os lab6.docx  README.md  vim.exe.stackdump
Assignment-SEM05-2019/: ankit eco final.docx  ~$signment_WordTex_Template.dotx
Assignment-SEM05-2019/DM2/: DM2.docx  Untitled.ipynb  gcoloring  gcolouring.cpp  graph_OjUJMVDPAmfJHCaC.graphml  graph_ffluLbjdXhrnxNAn.graphml  graph_xBGobskXYdMqrYhQ.graphml  main.py  ~$DM2.docx
Assignment-SEM05-2019/Economics/: ECO.docx
Assignment-SEM05-2019/Networks/: CN -.docx  CN.docx
Assignment-SEM05-2019/OS/: OS.docx  Untitled.m  a.out  char_count.cpp  sample_3.txt  ~$OS.docx
Assignment-SEM05-2019/OS/ccount/: .gitignore  CMakeLists.txt  callgrind.out.2540  generate_files.sh  meow.txt  perf.data  perf.data.old  test_output.txt  testing.sh
Assignment-SEM05-2019/OS/ccount/app/: CMakeLists.txt  file_ops.cpp  file_ops.hpp  main.cpp  threader.cpp  threader.hpp
Assignment-SEM05-2019/PLP/: PLP.docx  test.txt  testing.sh
Assignment-SEM05-2019/PLP/gst-c/: CMakeLists.txt  array_list.c  array_list.h  gst_item.c  gst_item.h  main.c
Assignment-SEM05-2019/PLP/mem_report/: c_mem.txt  java_mem.txt
Assignment-SEM05-2019/PLP/perf_report/: c_perf.data  c_perf_report.txt  c_perf_stat.txt  java_perf.data  java_perf_report.txt  java_perf_stat.txt
Assignment-SEM05-2019/PLP2/: PLP.docx  PLPAssignCorrect.java  PLPAssignCorrect.rar  gst-c  items.java  main.c  testing.sh  typescript  ~$PLP.docx
Assignment-SEM05-2019/Questions/: Assignment BTech 2019 EEE,CSE.docx  CSC305A_Assignment_1_R.docx
Assignment-SEM05-2019/Simulation/: ATM_OUTPUT.txt  Simulation _Prachi.docx  Simulation.docx  Untitled.m  ~$mulation.docx
CN-Lab/: 17ETCS002159_SATYAJIT_GHANA.docx  TODO.md
CN-Lab/B-Sec-Docs/: 17ETCS002122_PRACHI PODDAR(LAB 5.2).docx  17ETCS002122_PRACHI PODDAR(LAB4).docx  17ETCS002122_PRACHI PODDAR(LAB6).docx
CN-Lab/CN_Lab_Docs/: LabDoc-3.docx  LabDoc-6.docx  ~$bDoc-3.docx
CN-Lab/Lab02/: CMakeLists.txt  crc_lib.cpp  crc_lib.hpp  main.cpp
CN-Lab/Lab03/: CMakeLists.txt  graph.cpp  graph.hpp  main.cpp  network.cpp  network.hpp
CN-Lab/Lab04/: CMakeLists.txt  graph.cpp  graph.hpp  main.cpp  routing_table.cpp  routing_table.hpp
CN-Lab/Lab04/documentation/: LabDoc-4.docx
CN-Lab/Lab05/: CMakeLists.txt  main.cpp
CN-Lab/Lab07/: Untitled.ipynb
CN-Lab/Lab08/: Untitled.ipynb
CN-Lab/Practice/: CMakeLists.txt  main.cpp
CN_LAB_C/: LabDoc-1.docx  ~$bDoc-1.docx
CN_Lab_Docs/: .~lock.LabDoc-4.docx#  LabDoc-10.docx  LabDoc-2.docx  LabDoc-4.docx  LabDoc-5.docx  LabDoc-7.docx  LabDoc-8.docx  LabDoc-9.docx
OS-Lab/: .~lock.CSC306A_Operating system Lab_DayWiseExcercises_reviewed.docx#  CSC306A_Operating system Lab_DayWiseExcercises_reviewed.docx  OS LAB DOc.txt  ~$C306A_Operating system Lab_DayWiseExcercises_reviewed.docx
OS-Lab/Lab01/: CMakeLists.txt  main.cpp
OS-Lab/Lab02/: CMakeLists.txt  boww.txt  main.cpp
OS-Lab/Lab03/: CMakeLists.txt  main.cpp
OS-Lab/Lab03/documentation/: lab03.docx
OS-Lab/Lab04/: CMakeLists.txt  main.cpp  priority_schedule.cpp  priority_schedule.hpp  round_robin.cpp  round_robin.hpp  scheduling_algo.hpp
OS-Lab/Lab04/documentation/: lab04.docx
OS-Lab/Lab05/using_mutex/: CMakeLists.txt  main.cpp
OS-Lab/Lab06/: CMakeLists.txt  main.cpp
OS-Lab/Lab07/: CMakeLists.txt  main.cpp  reference.cpp
OS-Lab/Lab07/documentation/: lab07.docx
OS-Lab/Lab08/: CMakeLists.txt  main.cpp
OS-Lab/Practice/: CMakeLists.txt  banker.cpp  fileio.cpp  fileio2.cpp  main.cpp  pc_mutex.cpp  pc_sem.cpp  rw.cpp  test.txt
SIM-Lab/: .~lock.CSC308A_NEW_2019 manual - Copy.docx#  17ETCS002159_SATYAJIT_GHANA_CS_LAB_DOC.docx  CSC308A_NEW_2019 manual - Copy.docx  CSC308A_NEW_2019 manual.docx
SIM-Lab/KSTEST/: build.xml
SIM-Lab/Lab05/: temp.java
SIM-Lab/RNUMGEN/: build.xml
(+226 files in other folders)
